fixed firefox layout issue

--- a/client/style.css
+++ b/client/style.css
@@ -133,6 +133,7 @@ h2 {
     min-height: 500px;
     position: relative;
     max-height: 0px;
+    aspect-ratio: 16/9;
 }
 
 /* Header */
